<resources>
    <string name="app_name">Boozic</string>
    <string name="app_slogan">\"Drink Responsibly\"</string>

    <string name="first_active">First Activity</string>
    <string name="second_active">Second Activity</string>
    <string name="camera_active">The Camera is active</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="action_lists">Product Lists</string>
    <string name="action_heart">Favorites</string>
    <string name="action_theme">Theme</string>
    <string name="action_cash">Spending</string>
    <string name="action_settings">Settings</string>
    <string name="action_bio">About Us</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_legal">Legal</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="title_activity_product">Product</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_legal">Legal</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="search_hint">Search Boozic</string>
    <string name="title_activity_reveal_avtivity">RevealAvtivity</string>
    <string name="title_activity_reveal">RevealActivity</string>

    <string name="legal_liability">We are not responsible for any user generated content. Even though
        strict provisions are included in the content generation process, we do not control and are not
        responsible for what users post on our application and are not responsible for any offensive,
        inappropriate, obscene, unlawful, infringing, or otherwise objectionable or illegal user generated
        content you may encounter on our application. Our application is for recreational use only and
        any damages caused by the use or misuse of this program is not our responsibility. Our application
        is in no way encouraging substance abuse and/or underage drinking.
    </string>

</resources>
